# partition-sim

./: .gitmodules  Cargo.toml  README.md  docker-compose.yml  register_service.py
app/: openapi.yaml
docker/: sshd_config  test-node-base.Dockerfile  test-node-entrypoint.sh  test-node.Dockerfile  test-supervisor-docs.Dockerfile  test-supervisor.Dockerfile
src/: consul.rs  errors.rs  lib.rs  peer.rs  supervisor.rs
src/commands/: fs.rs  ip.rs  mod.rs  ssh.rs
