[package]
name = "partition-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssh = "0.9.9"
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }
tokio = { version = "1.13.0", features = ["full"] }
colored = "2.0.0"
