[package]
name = "partition-sim"
description = "Simulate network partitions in a docker cluster."
version = "0.1.0"
edition = "2021"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
license-file = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/aalekhpatel07/partition-sim"
repository = "https://github.com/aalekhpatel07/partition-sim"
keywords = ["network-partition", "partition", "simulator", "distributed-systems", "testing"]
categories = ["development-tools::testing", "simulation"]
default-run = "supervisor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssh = "0.9.9"
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }
tokio = { version = "1.13.0", features = ["full"] }
colored = "2.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
axum = { version = "0.6.4", features = ["http2", "headers", "macros"] }
axum-macros = "0.3.2"
local-ip-address = "0.5.1"
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive"] }

[profile.release]
lto = "fat"
